fixed compilation issue